# exploded

ExplodedView/: CMakeLists.txt
ExplodedView/assets/: test0.3DS  test0.max  test2.max  test3.3DS  test3.max  test5.max  test6.max  teste.mtl  teste2.mtl
ExplodedView/models/: test0.max  test1.max  test10.3DS  test3.3DS  test4.3DS  test9.3DS  test9.max
ExplodedView/src/: AddTrianglesCollision.h  Cell.cpp  Cell.h  CollisionData.h  ExplodedView.cpp  ExplodedView.h  FindPartVisitor.h  ModelLoader.h  Part.cpp  Part.h  PartsGraph.h  PropertiesTree.h  SegmentedParts.cpp  SegmentedParts.h  StringExplode.h  TriangleVisitor.h  findNodeVisitor.cpp  keyboardEventHandler.cpp  keyboardEventHandler.h  main.cpp  osgviewer.cpp
ExplodedView_old/: CMakeLists.txt
ExplodedView_old/models/: test0.3DS  test1.3DS  test10.3DS  test2.max  test7.3DS
ExplodedView_old/src/: Cell.cpp  SegmentedParts.h
ExplodedVolume/: ExplodedVolume.pro
ExplodedVolume/UserInterface/: UserInterface.cpp  UserInterface.h  UserInterface.pro  VisualizationWidget.h  main.cpp
ExplodedVolume/VolumeRenderer/: Cube.cpp  FBO.cpp  FBO.h  RayCastShader.cpp  Square.cpp  Square.h  VolumeRenderer.cpp  VolumeRenderer.h  VolumeRenderer.pro  VolumeRenderer.vcproj  main.cpp  textfile.cpp
papers/INF2062/: conclusao.tex  figuras.tex  implementacao.tex  introducao.tex  paper.aux  paper.bbl  paper.tex  resultados.tex  trabalhosrelacionados.tex
slides/INF2062_final/: Automated_generation_of_interactive_3D_exploded_view_diagrams.tex  Designing_effective_step-by-step_assembly_instructions.tex  Distortion_viewing_techniques_for_3dimensional_data.tex  artigos.tex  compileBibtex.bat  conclusao.tex  (+1 more)
trunk/ExplodedView/: CMakeLists.txt  leiame.txt
trunk/ExplodedView/assets/: test1.3DS  test1.max  test2.3DS  test2.max  test3.max  test4.3DS  test4.max  test5.3DS  test5.max  test6.3DS
trunk/ExplodedView/libs/DEEP/include/: SWIFT.h  SWIFT_common.h  SWIFT_linalg.h
trunk/ExplodedView/libs/PQP_v1.3/lib/: BuildLog.htm
trunk/ExplodedView/libs/VCollide201/: Makefile
trunk/ExplodedView/libs/VCollide201/MSVC_Compile/: VCollide2.ncb  VCollide2.sln  demo_bunny.vcproj  demo_hello_world.vcproj  demo_hello_world2.vcproj  demo_nbody.vcproj  demo_torii.vcproj
trunk/ExplodedView/libs/VCollide201/demos/bunny/: main.C
trunk/ExplodedView/libs/VCollide201/demos/nbody/: nbody.cpp
trunk/ExplodedView/libs/VCollide201/demos/rings/: main.C
trunk/ExplodedView/libs/VCollide201/src/: VInternal.C
trunk/ExplodedView/models/: test0.3DS  test1.3DS  test10.3DS  test10.max  test2.3DS  test4.3DS  test4.max  test7.max  test8.max  test9.3DS  test9.max
trunk/ExplodedView/src/: AddTrianglesCollision.h  ColorVisitor.h  ExplodedView.cpp  ExplodedView.h  ModelLoader.cpp  Part.cpp  Part.h  SegmentedParts.cpp  SegmentedParts.h  TriangleIndexVisitor.h  TriangleVertexVisitor.h  TriangleVisitor.h  findNodeVisitor.h  keyboardEventHandler.cpp  main.cpp
(+133 files in other folders)
